feat: Updated EasyVenue Project With Proper & Complete Backend Logic And Frontend UI